[metadata]
name = locuaz
version = 0.6.0
author =  Patricio Barletta
author_email = pbarletta@gmail.com
description = Antibody optimization protocol
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
long_description_content_type = text/x-rst
keywords = molecular, dynamics, antibody, antibodies

[options]
python_requires = >=3.11
packages =
	locuaz
	locuaz.DLPacker
install_requires =
    py
    scipy
    numpy >=1.21.0,<2.0.0
    attrs
	chemfiles
    mdanalysis >= 2.6.0
    biobb_common
    biobb_analysis
    biobb_model
    biobb_io
    biobb_gromacs
    pdb2pqr
    gmx-mmpbsa
    tqdm
    freesasa
    pytest
    cerberus
include_package_data = True

[options.packages.find]
where = locuaz

[options.package_data]
locuaz =
	schema.yaml
	DLPacker/charges.rtp
	DLPacker/library.npz
	sample_bin/aux_scripts/*
	sample_bin/gmxmmpbsa/*
	sample_bin/haddock/* 
	sample_bin/dlpacker/*

[options.extras_require]
docs = 
    sphinx
    sphinx-rtd-theme

[options.entry_points]
console_scripts =
	locuaz = locuaz.protocol:main

[build_sphinx]
all-files = 1
source-dir = docs/source
build-dir = docs/build/html
warning-is-error = 0
